--- a/templates/farmers_page/order-page.html
+++ b/templates/farmers_page/order-page.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,24 +8,46 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Farmer-Profile</title>
+    <title>KBT-Marketplace</title>
 
     <!-- CSS FILES -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap"
+      rel="preconnect"
+      href="{% static 'https://fonts.gstatic.com' %}"
+      crossorigin
+    />
+
+    <link
+      href="{% static 'https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap' %}"
       rel="stylesheet"
     />
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/bootstrap-icons.css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet" />
 
-    <link rel="../stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}" />
 
-    <link href="../css/tooplate-little-fashion.css" rel="stylesheet" />
+    <link
+      href="{% static 'css/tooplate-little-fashion.css' %}"
+      rel="stylesheet"
+    />
+    <link
+      href="{% static 'fontawesomefree/css/fontawesome.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="{% static 'fontawesomefree/css/brands.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="{% static 'fontawesomefree/css/solid.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!--
 
 Tooplate 2127 Little Fashion
@@ -33,78 +56,68 @@ https://www.tooplate.com/view/2127-little-fashion
 
 -->
   </head>
-
   <body>
-    <section class="preloader">
-      <div class="spinner">
-        <span class="sk-inner-circle"></span>
+    <style>
+      ul {
+        list-style: none;
+      }
+      ul li {
+        margin-left: 15px;
+      }
+
+      ul li a:hover {
+        text-decoration: underline;
+      }
+
+      .slc {
+        color: #ff4400;
+        font-size: 20px;
+        font-weight: bold;
+        text-decoration: underline;
+        background-color: 3px 3px #ff4400;
+      }
+    </style>
+    <header
+      class="site-header mt-0 section-padding d-flex justify-content-center align-items-center"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-12">
+            <h1>
+              <h1 class="hero-title text-center mb-5">Orders List</h1>
+            </h1>
+          </div>
+        </div>
       </div>
-    </section>
+    </header>
 
-    <main>
-
-      <section class="featured-product section-padding mt-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-center">
-              <h2 class="mb-5">Orders List</h2>
-            </div>
-
+    <section class="container products section-padding">
+      <div class="container">
+        <div class="row">
+           
             <div class="table table-responsive ">
                 <table class="table table-striped">
                     <thead class="table-dark">
                         
                             <td>ID</td>
-                            <td>Email</td>
-                            <td>Phone</td>
-                            <td>Crop-Name</td>
-                            <td>Crop-Title</td>
-                            <td>Crop-Quntity</td>
-                            <td>Crop-Price</td>
+                            <td>Crop</td>
+                            <td>Quntity</td>
+                            <td>Price</td>
                             <td>Status</td>
                       
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>1</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
-                      <tr>
-                        <td>3</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
+                      {% for item in recent_orders %}
+          <tr>
+            <td>1</td>
+            <td>{{item.crop.crop_name}}</td>
+            <td>{{item.quantity}}</td>
+            <td>{{item.price}}</td>
+            <td>{% if item.order.paid %}Paid{% else %}Pending{% endif %}</td>
+          </tr>
+          {% endfor %}
+                      
+                     
                       
                     </tbody>
                   </table>
@@ -120,74 +133,80 @@ https://www.tooplate.com/view/2127-little-fashion
       </section>
     </main>
 
-       <footer class="site-footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-10 me-auto mb-4">
-              <h4 class="text-white mb-3">
-                <a href="index.html">KBT</a>-Marketplace
-              </h4>
-              <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
-                Copyright © 2025 <strong>KBT-Msrkrtplace</strong>
-              </p>
-              <br />
-              <p class="copyright-text">
-                Designed by <a href="#" target="_blank">RandoDev</a>
-              </p>
-            </div>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-10 me-auto mb-4">
+            <h4 class="text-white mb-3">
+              <a href="index.html">KBT</a> Marketplace
+            </h4>
+            <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
+              Copyright © 2025 <strong>KBT-Marketplace</strong>
+            </p>
+            <br />
+            <p class="copyright-text">
+              Designed by
+              <a href="#" target="_blank">Aliyu Muhammad Musa</a>
+            </p>
+          </div>
 
-            <div class="col-lg-5 col-8">
-              <h5 class="text-white mb-3">Sitemap</h5>
+          <div class="col-lg-5 col-8">
+            <h5 class="text-white mb-3">Sitemap</h5>
 
-              <ul class="footer-menu d-flex flex-wrap">
-                <li class="footer-menu-item">
-                  <a href="about.html" class="footer-menu-link">Story</a>
-                </li>
+            <ul class="footer-menu d-flex flex-wrap">
+              <li class="footer-menu-item">
+                <a href="about.html" class="footer-menu-link">Story</a>
+              </li>
 
-                <li class="footer-menu-item">
-                  <a href="#" class="footer-menu-link">Products</a>
-                </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Products</a>
+              </li>
 
-                <li class="footer-menu-item">
-                  <a href="#" class="footer-menu-link">Privacy policy</a>
-                </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Privacy policy</a>
+              </li>
 
-                <li class="footer-menu-item">
-                  <a href="#" class="footer-menu-link">FAQs</a>
-                </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">FAQs</a>
+              </li>
 
-                <li class="footer-menu-item">
-                  <a href="#" class="footer-menu-link">Contact</a>
-                </li>
-              </ul>
-            </div>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Contact</a>
+              </li>
+            </ul>
+          </div>
 
-            <div class="col-lg-3 col-4">
-              <h5 class="text-white mb-3">Social</h5>
+          <div class="col-lg-3 col-4">
+            <h5 class="text-white mb-3">Social</h5>
 
-              <ul class="social-icon">
-                <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+            <ul class="social-icon">
+              <li>
+                <a href="#" class="social-icon-link bi-youtube"></a>
+              </li>
 
-                <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+              <li>
+                <a href="#" class="social-icon-link bi-whatsapp"></a>
+              </li>
 
-                <li><a href="#" class="social-icon-link bi-instagram"></a></li>
+              <li>
+                <a href="#" class="social-icon-link bi-instagram"></a>
+              </li>
 
-                <li><a href="#" class="social-icon-link bi-skype"></a></li>
-              </ul>
-            </div>
+              <li>
+                <a href="#" class="social-icon-link bi-skype"></a>
+              </li>
+            </ul>
           </div>
         </div>
-      </footer>
+      </div>
+    </footer>
 
-      <!-- JAVASCRIPT FILES -->
-      <script src="../js/jquery.min.js"></script>
-      <script src="../js/bootstrap.bundle.min.js"></script>
-      <script src="../js/Headroom.js"></script>
-      <script src="../js/jQuery.headroom.js"></script>
-      <script src="../js/slick.min.js"></script>
-      <script src="../js/custom.js"></script>
-    </main>
-  </body>
+    <!-- JAVASCRIPT FILES -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/Headroom.js' %}"></script>
+    <script src="{% static 'js/jQuery.headroom.js' %}"></script>
+    <script src="{% static 'js/slick.min.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
+</body>
 </html>
-
-    
