--- a/templates/farmers_page/history.html
+++ b/templates/farmers_page/history.html
@@ -53,55 +53,18 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="table table-responsive ">
                 <table class="table table-striped">
                     <thead class="table-dark">
-                        
-                            <td>ID</td>
-                            <td>Email</td>
-                            <td>Phone</td>
-                            <td>Crop-Name</td>
-                            <td>Crop-Title</td>
-                            <td>Crop-Quntity</td>
-                            <td>Crop-Price</td>
+                            <td>Bank Name</td>
+                            <td>Account Name</td>
+                            <td>Account Number</td>
+                            <td>Amount</td>
                             <td>Status</td>
                       
                     </thead>
                     <tbody>
                       <tr>
-                        <td>1</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
                         <td>08026761796</td>
                         <td>Beans</td>
                         <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
-                      <tr>
-                        <td>3</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
-                        <td>$25</td>
-                        <td>pending</td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>aliyumuhammad9990@gmail.com</td>
-                        <td>08026761796</td>
-                        <td>Beans</td>
-                        <td>Beans from Jos State</td>
-                        <td>2</td>
                         <td>$25</td>
                         <td>pending</td>
                       </tr>
