--- a/templates/farmers_page/view-crops.html
+++ b/templates/farmers_page/view-crops.html
@@ -133,7 +133,7 @@ https://www.tooplate.com/view/2127-little-fashion
           {% endfor %}
         </div>
       </div>
-      incl
+      {% include 'components/pagination.html' with page=crop %}
     </section>
 
       <footer class="site-footer">
