--- a/templates/farmers_page/add-crops.html
+++ b/templates/farmers_page/add-crops.html
@@ -173,7 +173,7 @@ https://www.tooplate.com/view/2127-little-fashion
             </p>
             <br />
             <p class="copyright-text">
-              Designed by <a href="#" target="_blank">RandoDev</a>
+              Designed by <a href="#" target="_blank">Aliyu Muhammad Musa</a>
             </p>
           </div>
 
