--- a/templates/farmers_page/add-crops.html
+++ b/templates/farmers_page/add-crops.html
@@ -59,12 +59,12 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
         </div>
       </header>
+      {% include 'components/message.html' %}
       <section class="sign-in-form section-padding">
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto col-12">
         
-
               <div class="row">
                 <div class="col-lg-8 col-11 mx-auto">
                   <form role="form" method="post" enctype="multipart/form-data">
