--- a/templates/farmers_page/withdraw.html
+++ b/templates/farmers_page/withdraw.html
@@ -63,7 +63,7 @@ https://www.tooplate.com/view/2127-little-fashion
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto col-12">
-        
+              {% include 'components/message.html' %}
 
               <div class="row">
                 <div class="col-lg-8 col-11 mx-auto">
